--- a/css/index.css
+++ b/css/index.css
@@ -18,7 +18,7 @@ body::before {
   z-index: -1;
   background: var(--color-darkblue);
   background-image: linear-gradient(115deg, rgb(58 58 158 / 80%), rgb(136 136 206 / 70%)),
-    url("https://cdn.freecodecamp.org/testable-projects-fcc/images/survey-form-background.jpeg");
+    url('https://cdn.freecodecamp.org/testable-projects-fcc/images/survey-form-background.jpeg');
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
@@ -45,7 +45,6 @@ label {
   font-size: 1.125rem;
   margin-bottom: 0.5rem;
   color: white;
-  margin: 0.5rem 0;
 }
 
 h1 {
